--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="card-reveal">
                           <span class="card-title grey-text text-darken-4">Iced Coffe<i class="material-icons right">close</i></span>
-                          <p>hill out with our frosty iced coffee at Golden Hour Café – the perfect sip for beating the heat!</p>
+                          <p>Chill out with our frosty iced coffee at Golden Hour Café – the perfect sip for beating the heat!</p>
                         </div>
                       </div>
                 </li>
