Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               </div>
               <br>
 
-                <div class="col offset-m2">
+                <div class="col offset-m2 container">
                   <div class="card-panel grey lighten-5 z-depth-1">
                     <div class="row valign-wrapper" style="gap: 50px; padding: 10px">
                       <div class="col s3">
